
   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  after Zope 2.8.1 

    Features added

      - Collector #1118: Added syntax to dtml-sqlgroup to support flexible
        generation of 'UPDATE' statements (bounty sponsored by Logicalware).

      - The '@' character is now allowed in object ids (RFC 1738 allows it).

    Bugs Fixed

      - Collector #1490: Added a new zope.conf option to control the
        character set used to encode unicode data that reaches
        ZPublisher without any specified encoding.

      - disabled ".. include" directive for all the ZReST product and the 
        reStructuredText package

      - Collector #1888: Adjust call to 'engine.translate' to accomodate
        change in its signature.

      - Collector #1863: Prevent possibly sensitive information to leak via
        the TransientObject's __repr__ method.

      - Repaired 'handle_errors' usage for doctests, along with the
        supporting 'debug' argument passed to
        'ZPublisher.Test.publish_module'.

      - Collector #1879: applied patch by Dieter Maurer to fix a bug in 
        ac_aquire() ignoring the default argument

      - Collector #1864, #1906: fixed header normalization in appendHeader()

      - Collector #1899: fixed migration issue when using export/import for
        ZCatalog instances

      - 'ZPublisher.Test.publish' now takes a 'done_string' argument, which
        is written to standard error when the request completes (forward
        ported from Zope 2.7 branch).

      - Collector #556:  <dtml-sqlvar> now returns 'null' instead of 'None'
        for values which are None in Python (sponsored by a bounty from
        Logicalware).

      - Collector #1182: BBB Forward port fix from 2.7 branch (19 months
        ago!), reverting 'guarded_getitem' to pass the 'index' argument as
        the name to 'validate'.  This change is *not* propagated to the