@@ -33,6 +33,10 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1914: Hardened 'call_with_ns' (in
+        'Products.PageTemplates.ZRPythonExpr') against namespaces from other
+        callers than page templates.
+
       - Collector #1490: Added a new zope.conf option to control the
         character set used to encode unicode data that reaches
         ZPublisher without any specified encoding.
